--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,6 +16,8 @@ jobs:
       - run: |
           pip install -r requirements.txt
           python manage.py test taskManager
+    requires:
+      - build
 
   integration:
     docker:
@@ -26,6 +28,9 @@ jobs:
           command: |
             echo "This is an integration step"
             exit 1
+    requires:
+      - build
+      - test
 
   prod:
     docker:
@@ -33,6 +38,10 @@ jobs:
     steps:
       - checkout
       - run: echo "This is a deploy step"
+    requires:
+      - build
+      - test
+      - integration
 
 workflows:
   version: 2
