--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,8 +16,6 @@ jobs:
       - run: |
           pip install -r requirements.txt
           python manage.py test taskManager
-    requires:
-      - build
 
   integration:
     docker:
@@ -28,10 +26,7 @@ jobs:
           command: |
             echo "This is an integration step"
             exit 1
-    continue-on-error: true
-    requires:
-      - build
-      - test
+          when: on_fail      # Even if the job fails, continue to the next jobs
 
   prod:
     docker:
@@ -39,16 +34,51 @@ jobs:
     steps:
       - checkout
       - run: echo "This is a deploy step"
-    requires:
-      - build
-      - test
-      - integration
+
+  artifact:
+    docker:
+      - image: python:3.6
+    steps:
+      - checkout
+      - run: echo "hello" > hello.txt
+      - store_artifacts:
+          path: hello.txt
+          destination: artifact-file
 
 workflows:
   version: 2
   django:
     jobs:
-      - build
+      - build:
+          filters:          # Run the job with a specific branch
+            branches:
+              only:
+                - main
       - test
+          requires:
+            - build
+          filters:
+            branches:
+              only:
+                - main
       - integration
+          requires:
+            - test
+          filters:
+            branches:
+              only:
+                - main
       - prod
+          requires:
+            - integration
+          filters:
+            branches:
+              only:
+                - main
+      - artifact
+          requires:
+            - prod
+          filters:
+            branches:
+              only:
+                - main
